syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto"; // ✅ Add this

option csharp_namespace = "GrpcServices.FixedAssetManagement";

service AssetSpecificationService {
    rpc GetAllAssetSpecification (google.protobuf.Empty) returns (AssetSpecificationListResponse);
}

message AssetSpecificationDto {
    int32 AssetId = 1;
    string SpecificationName = 2;
    string SpecificationValue = 3;
    google.protobuf.Timestamp CapitalizationDate = 4; // ✅ FIXED
}

message AssetSpecificationListResponse {
    repeated AssetSpecificationDto AssetSpecifications = 1;
}
